# Global-Transformations

./: .gitignore  .gitlab-ci.yml  DataStructure.py  GT.py  GT_DU.py  GT_DU_2.py  Gbf.py  Gmap.py  Graph.py  PFunctor.py  README.md  Sequence.py  Sheaf.py  TODO.md  Test.py  array2D.ml  core_gbf.ml  def_gbf.ml  gt_generator.py  linear.ml  nd_gt_gen.py  requirements.txt  setup.cfg  tests_gmap.py  tests_sequence.py
cprofs/comp_774566b_e7b792a1/: cprof_gmap  cprof_gmap_new
data/: DataStructure.py  Graph.py  Open.py  Sequence.py  Sheaf.py
engine/: GT.py  Memory.py  PFunctor.py
src/data/: Gmap.py  Graph.py  Open.py  Sequence.py  Sheaf.py
src/engine/: GT.py  Memory.py  PFunctor.py
src/engine/down_nd/: GT.py  Memory.py  PFunctor.py
src/engine/downward_resolv/: GT.py
src/engine/upward_resolv/: GT_DU.py  Memory.py  PFunctor_DU.py
src/libgt/data/: Open.py  Sequence.py  Tree.py
src/libgt/engine/: GT.py  Memory.py  PFunctor.py
src/old/: PC.py
test/: gmap.py  graph.py  graph_anim.py  integer.py  open.py  sequence.py  sheaf.py  tree.py
test/plot/: README.md  gmap_tmr.py  graph_sierpinsky.py  graph_tmr.py  open_rivers.py  open_sierpinsky.py
test/plot/jupyter/: gmap_tmr.ipynb  graph_sierpinksy.ipynb  graph_tmr.ipynb  open_rivers.ipynb  open_sierpinksy.ipynb
tests/: Test.py  test_ND.py  tests_ND.py  tests_gmap.py  tests_graph.py  tests_sequence.py  tests_sheaf.py
tests/plots/: plot_3d.py  plot_3d_gmap.py  plot_3d_gmap_river.py  plot_3d_sierpinsky.py
tests/plots/jupyter/: plot_3d_interactive.ipynb  plot_3d_interactive_gmap.ipynb  (+1 more)
