[metadata]
# replace with your username:
name = granturismo
version = 2.0.0
author = Alexandre Fernandez
author_email = alexandre.fernandez@lacl.fr
description = Global Transformation library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.lacl.fr/fernandez/gran_turismo
project_urls =
    Bug Tracker = https://git.lacl.fr/fernandez/gran_turismo/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src